--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,5 +1,8 @@
+httpx>=0.23.3,<0.24
 aerich>=0.7.1,<0.8
+pytest>=7.2.1,<7.3
 fastapi>=0.92.0,<0.93
 uvicorn>=0.20.0,<0.21
 asyncpg>=0.27.0,<0.28
+requests>=2.28.2,<2.29
 tortoise-orm>=0.19.2,<0.20
