--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -5,4 +5,5 @@ fastapi>=0.92.0,<0.93
 uvicorn>=0.20.0,<0.21
 asyncpg>=0.27.0,<0.28
 requests>=2.28.2,<2.29
+gunicorn>=20.1.0,<20.2
 tortoise-orm>=0.19.2,<0.20
