--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -2,3 +2,8 @@
 tortoise_orm = "app.db.TORTOISE_ORM"
 location = "./migrations"
 src_folder = "./."
+
+[tool.black]
+line-length = 119
+exclude = "env"
+target-version = ["py311"]
