--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,4 +1,7 @@
+isort>=5.12.0,<5.13
 httpx>=0.23.3,<0.24
+black>=23.1.0,<24.2
+flake8>=6.0.0,<6.1
 aerich>=0.7.1,<0.8
 pytest>=7.2.1,<7.3
 fastapi>=0.92.0,<0.93
@@ -6,4 +9,5 @@ uvicorn>=0.20.0,<0.21
 asyncpg>=0.27.0,<0.28
 requests>=2.28.2,<2.29
 gunicorn>=20.1.0,<20.2
+pytest-cov>=4.0.0,<4.1
 tortoise-orm>=0.19.2,<0.20
