--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,12 @@ name: Continuous Integration and Delivery
 on: [push]
 
 env:
-  IMAGE: docker.pkg.github.com/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/summarizer
+  REGISTRY_ID: crpoelca98fh3k230tdm
+  IMAGE: cr.yandex/${REGISTRY_ID}/summarizer
 
 jobs:
 
-  build:
+  ycbuild:
     name: Build Docker Image
     runs-on: ubuntu-latest
     steps:
@@ -15,10 +16,10 @@ jobs:
         uses: actions/checkout@v2.4.0
         with:
           ref: main
-      - name: Log in to GitHub Packages
-        run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
+      - name: Log in to Yandex Container Registry
+        run: echo ${OAUTH_TOKEN} | docker login --username oauth --password-stdin cr.yandex
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OAUTH_TOKEN: ${{ secrets.USER_OAUTH_TOKEN }}
       - name: Pull image
         run: |
           docker pull ${{ env.IMAGE }}:latest || true
@@ -42,10 +43,10 @@ jobs:
         uses: actions/checkout@v2.4.0
         with:
           ref: main
-      - name: Log in to GitHub Packages
-        run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
+      - name: Log in to Yandex Container Registry
+        run: echo ${OAUTH_TOKEN} | docker login --username oauth --password-stdin cr.yandex
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OAUTH_TOKEN: ${{ secrets.USER_OAUTH_TOKEN }}
       - name: Pull image
         run: |
           docker pull ${{ env.IMAGE }}:latest || true
